# toe

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
examples/: quick_start.ipynb
facts/: public_facts.json
outputs/: epoch_sweep_20260417_035706.csv  epoch_sweep_20260417_040222.csv
outputs/epoch_bake/: epoch_sweep_04172026.csv
outputs/reproduction/: reproduction_results.csv  reproduction_results_20260417_044431.csv
scripts/: epoch_bake_sweep.py  magic_island_sweep.py  meta_optimize_invariants.py  pde_relaxation.py  plot_sweep_results.py  run_reproduction.py  run_reproduction.py   two_gyro_lattice_demo.py  vortex_swarm.py  z_flywheel_map.py
src/: conduit.py  config.py
tests/: conftest.py  test_conduit.py  test_config.py  test_pipeline.py  test_ray.py  test_scripts.py
