[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toe"
version = "1.0.0"
description = "Aaron’s Theory of Everything — Flux Flywheels, Gauged Hopf Lattice"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",   # parallel test running
]

[tool.pytest.ini_options]
addopts = "--verbose --cov=conduit --cov-report=term-missing --cov-report=xml --cov-append"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow-running (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
parallel = true
source = ["src/conduit"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true


