[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toe"
version = "1.0.0"
description = "Aaron’s Theory of Everything — Flux Flywheels, Gauged Hopf Lattice"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
    "hypothesis>=6.100.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
include = ["src/**/*.py", "tests/**/*.py", "*.py"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "W",   # pycodestyle, pyflakes, isort, warnings
    "B", "C4", "SIM",     # bugbear, comprehensions, simplify
    "UP", "RUF", "PLC",   # pyupgrade, ruff, pylint
]
ignore = ["E501", "E402", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "--verbose --cov=conduit --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow-running (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false          # relaxed for now (conduit.py has 100+ functions)
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict = false                         # practical mode while we type the core

[[tool.mypy.overrides]]
module = ["tests.*", "src.conduit"]
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch.*"]
ignore_missing_imports = true
